--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,30 @@ body {
   overflow: hidden;
 }
 
+.chatbot {
+  position: absolute;
+  bottom: 45px;
+  right: 65px;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  width: 70px;
+  height: 70px;
+  background-color: #fc4820;
+  box-shadow: -3px -3px 10px #fc48205e, 2px 2px 10px #fc48205e;
+  background-image: linear-gradient(45deg, #fc4820, #ef6848);
+  border-radius: 50%;
+}
+
+.chatbotScreen {
+  position: absolute;
+  bottom: 130px;
+  right: 65px;
+  border: none;
+  border-radius: 10px;
+  box-shadow: -10px -10px 10px #242424a8, 5px 5px 5px rgb(0 0 0 / 16%);
+}
+
 main {
   overflow-y: scroll;
   max-height: 100vh;
@@ -36,4 +60,18 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.EarthPanel .content p {
+  font-size: 1rem;
+  font-weight: 400;
+  color: var(--white);
+  width: 700px;
+}
+
+.EarthPanel .content p.year {
+  font-size: 2rem;
+  font-weight: 700;
+  color: var(--white);
+  margin: 0 0 5px;
 }
