--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -273,71 +273,30 @@
     </div> -->
 
 
-    <section class="search-domain-area section-bg pt-140 pb-140" data-background="{% static 'images/index/section_bg02.jpg' %}">
+    <section class="search-domain-area section-bg pt-140 pb-140" data-background="images/index/section_bg02.jpg">
       <div class="container">
         <div class="row align-items-end mb-80">
-          <div class="col-xl-4">
-
-            <div class="section-tittle section-tittle2">
-              <span>Get your domain</span>
-              <h2>Search domain you want</h2>
-            </div>
-          </div>
           <div class="col-xl-8">
 
-            <form action="#" class="search-box">
-              <div class="input-form">
-                <input type="text" placeholder="Search your domain name here">
-              </div>
-              <div class="select-form">
-                <div class="select-itms">
-                  <select name="select" id="select1">
-                    <option value="">.com</option>
-                    <option value="">.bd</option>
-                    <option value="">.edu</option>
-                    <option value="">.gov</option>
-                    <option value="">.us</option>
-                    <option value="">.uk</option>
-                    <option value="">.pk</option>
-                    <option value="">.org</option>
-                    <option value="">.live</option>
-                    <option value="">.net</option>
-                  </select>
-                </div>
-              </div>
-              <div class="search-form">
-                <a href="#">search now</a>
-              </div>
-            </form>
-
+            <div class="section-tittle section-tittle2">
+              <h2>Climate Change</h2>
+            </div>
           </div>
         </div>
 
         <div class="row">
           <div class="domain-list">
             <div class="single-domain">
-              <span>.com</span>
-              <p>$3.99/Year</p>
+              <span>Temperature</span>
+              <p>&uarr;2.1 &#176;F</p>
             </div>
             <div class="single-domain">
-              <span>.net</span>
-              <p>$2.99/Year</p>
+              <span>Sea Level</span>
+              <p>&uarr;3.3 mm/year</p>
             </div>
             <div class="single-domain">
-              <span>.com</span>
-              <p>$3.99/Year</p>
-            </div>
-            <div class="single-domain">
-              <span>.co</span>
-              <p>$5.99/Year</p>
-            </div>
-            <div class="single-domain">
-              <span>.org</span>
-              <p>$2.99/Year</p>
-            </div>
-            <div class="single-domain">
-              <span>.live</span>
-              <p>$1.99/Year</p>
+              <span>Water Temp</span>
+              <p>&uarr;1.1 &#176;F</p>
             </div>
           </div>
         </div>
@@ -422,6 +381,129 @@
       </div>
     </section>
 
+    <div class="services-area section-padding30 fix">
+      <div class="container">
+
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="section-tittle text-center mb-100">
+              <span>Oue Best Services</span>
+              <h2>What we have for you</h2>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-4 col-md-6 col-sm-6">
+            <div class="services-wrapper mb-50">
+              <div class="single-services">
+                <div class="services-icon">
+                  <span class="flaticon-server"></span>
+                </div>
+                <div class="services-cap">
+                  <h3><a href="services.html">Shared Hosting</a></h3>
+                  <p>Hunky dory barney fannaround up the duff no biggie loo cup of tea jolly good ruddy!</p>
+
+                </div>
+              </div>
+              <div class="services-shape">
+                <span>.01</span>
+                <img src="assets/img/gallery/shape-services.png" alt="">
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-6">
+            <div class="services-wrapper mb-50">
+              <div class="single-services">
+                <div class="services-icon">
+                  <span class="flaticon-green"></span>
+                </div>
+                <div class="services-cap">
+                  <h3><a href="services.html">Reseller Hosting</a></h3>
+                  <p>Hunky dory barney fannaround up the duff no biggie loo cup of tea jolly good ruddy!</p>
+
+                </div>
+              </div>
+              <div class="services-shape">
+                <span>.02</span>
+                <img src="assets/img/gallery/shape-services.png" alt="">
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-6">
+            <div class="services-wrapper mb-50">
+              <div class="single-services">
+                <div class="services-icon">
+                  <span class="flaticon-servers"></span>
+                </div>
+                <div class="services-cap">
+                  <h3><a href="services.html">Cloud Hosting</a></h3>
+                  <p>Hunky dory barney fannaround up the duff no biggie loo cup of tea jolly good ruddy!</p>
+
+                </div>
+              </div>
+              <div class="services-shape">
+                <span>.03</span>
+                <img src="assets/img/gallery/shape-services.png" alt="">
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-6">
+            <div class="services-wrapper mb-50">
+              <div class="single-services">
+                <div class="services-icon">
+                  <span class="flaticon-servers"></span>
+                </div>
+                <div class="services-cap">
+                  <h3><a href="services.html">Shared Hosting</a></h3>
+                  <p>Hunky dory barney fannaround up the duff no biggie loo cup of tea jolly good ruddy!</p>
+
+                </div>
+              </div>
+              <div class="services-shape">
+                <span>.04</span>
+                <img src="assets/img/gallery/shape-services.png" alt="">
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-6">
+            <div class="services-wrapper mb-50">
+              <div class="single-services">
+                <div class="services-icon">
+                  <span class="flaticon-green"></span>
+                </div>
+                <div class="services-cap">
+                  <h3><a href="services.html">Reseller Hosting</a></h3>
+                  <p>Hunky dory barney fannaround up the duff no biggie loo cup of tea jolly good ruddy!</p>
+
+                </div>
+              </div>
+              <div class="services-shape">
+                <span>.05</span>
+                <img src="assets/img/gallery/shape-services.png" alt="">
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-6">
+            <div class="services-wrapper mb-50">
+              <div class="single-services">
+                <div class="services-icon">
+                  <span class="flaticon-server"></span>
+                </div>
+                <div class="services-cap">
+                  <h3><a href="services.html">Cloud Hosting</a></h3>
+                  <p>Hunky dory barney fannaround up the duff no biggie loo cup of tea jolly good ruddy!</p>
+
+                </div>
+              </div>
+              <div class="services-shape">
+                <span>.06</span>
+                <img src="assets/img/gallery/shape-services.png" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <div class="our-pricing-area section-padding30 fix">
       <div class="container">
