--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -23,30 +23,35 @@
   <link rel="stylesheet" href="{% static 'css/indexStyling/styles.css' %}">
 </head>
 <style>
-  .chatbot {
-  position: absolute;
-  bottom: 45px;
-  right: 65px;
-  outline: none;
-  border: none;
-  cursor: pointer;
-  width: 70px;
-  height: 70px;
-  background-color: #fc4820;
-  box-shadow: -3px -3px 10px #fc48205e, 2px 2px 10px #fc48205e;
-  background-image: linear-gradient(45deg, #fc4820, #ef6848);
-  border-radius: 50%;
-}
+  body {
+    position: relative;
+  }
 
-.chatbotScreen {
-  position: absolute;
-  bottom: 130px;
-  right: 65px;
-  border: none;
-  border-radius: 10px;
-  box-shadow: -10px -10px 10px #242424a8, 5px 5px 5px rgb(0 0 0 / 16%);
-}
+  .chatbot {
+    position: fixed;
+    bottom: 45px;
+    right: 65px;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    width: 70px;
+    height: 70px;
+    background-color: #fc4820;
+    box-shadow: -3px -3px 10px #fc48205e, 2px 2px 10px #fc48205e;
+    background-image: linear-gradient(45deg, #fc4820, #ef6848);
+    border-radius: 50%;
+  }
+
+  .chatbotScreen {
+    position: absolute;
+    bottom: 130px;
+    right: 65px;
+    border: none;
+    border-radius: 10px;
+    box-shadow: -10px -10px 10px #242424a8, 5px 5px 5px rgb(0 0 0 / 16%);
+  }
 </style>
+
 <body>
 
   <div id="preloader-active">
@@ -90,10 +95,6 @@
                       <li><a href="services.html">Effects</a></li>
                       <li><a href="">Solutions</a></li>
                       <li><a href="news.html">News</a>
-                        <ul class="submenu">
-                          <li><a href="news.html">Blog</a></li>
-                          <li><a href="blog_details.html">Blog Details</a></li>
-                        </ul>
                       </li>
                     </ul>
                   </nav>
@@ -101,7 +102,7 @@
               </div>
               <div class="col-xl-2 col-lg-3 col-md-3">
                 <div class="header-right-btn f-right d-none d-lg-block">
-                  <a href="#" class="btn header-btn">
+                  <a href="earth.html" class="btn header-btn">
                     The Human Asteroid.
                   </a>
                 </div>
@@ -134,17 +135,6 @@
                 consultation. Find
                 experienced doctors across all specialties
               </p>
-              <div class="select-btn">
-                <select name="" id="">
-                  <option value="">Best Locations</option>
-                  <option value="">Mahim</option>
-                  <option value="">Andheri</option>
-                  <option value="">Powai</option>
-                  <option value="">Bandra</option>
-                  <option value="">Kandivali</option>
-                </select>
-                <a href="http://localhost/Hospital/hospital.php#doc-display">Search Hospitals</a>
-              </div>
             </div>
           </div>
         </div>
@@ -331,56 +321,6 @@
     </section>
 
 
-    <section class="work-company">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-lg-5">
-
-            <div class="section-tittle section-tittle3">
-              <span>Get your domain</span>
-              <h2>We are with you every step of the way</h2>
-            </div>
-          </div>
-          <div class="col-lg-7">
-            <div class="logo-area">
-              <div class="row">
-                <div class="col-lg-4 col-md-4 col-sm-6">
-                  <div class="single-logo">
-                    <img src="{% static 'images/index/cisco_brand.png' %}" alt="">
-                  </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-6">
-                  <div class="single-logo">
-                    <img src="{% static 'images/index/cisco_brand2.png' %}" alt="">
-                  </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-6">
-                  <div class="single-logo">
-                    <img src="{% static 'images/index/cisco_brand3.png' %}" alt="">
-                  </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-6">
-                  <div class="single-logo">
-                    <img src="{% static 'images/index/cisco_brand4.png' %}" alt="">
-                  </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-6">
-                  <div class="single-logo">
-                    <img src="{% static 'images/index/cisco_brand5.png' %}" alt="">
-                  </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-6">
-                  <div class="single-logo">
-                    <img src="{% static 'images/index/cisco_brand6.png' %}" alt="">
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
     <div class="services-area section-padding30 fix">
       <div class="container">
 
@@ -505,151 +445,10 @@
       </div>
     </div>
 
-    <div class="our-pricing-area section-padding30 fix">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-lg-6 col-md-6">
-            <div class="tab-content" id="nav-tabContent">
-
-              <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
-                <div class="single-pricing mb-30">
-                  <div class="pricing-caption text-center">
-                    <div class="procing-logo">
-                      <img src="{% static 'images/index/roket.png' %}" alt="">
-                    </div>
-                    <span>$ 05.00</span>
-                    <div class="pricing-listing">
-                      <ul>
-                        <li>Increase traffic 50%</li>
-                        <li>Social Media Marketing</li>
-                        <li>10 Free Optimization</li>
-                        <li>24/7 support</li>
-                      </ul>
-                    </div>
-                    <a href="#" class="btn white-btn">Get the plan</a>
-                  </div>
-
-                  <div class="pricing-shape">
-                    <img class="pricing1" src="{% static 'images/index/procing-shape1.png' %}" alt="">
-                    <img class="pricing2" src="{% static 'images/index/procing-shape2.png' %}" alt="">
-                  </div>
-                </div>
-              </div>
-
-              <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
-                <div class="single-pricing  mb-30">
-                  <div class="pricing-caption text-center">
-                    <div class="procing-logo">
-                      <img src="{% static 'images/index/roket.png' %}" alt="">
-                    </div>
-                    <span>$ 05.00</span>
-                    <div class="pricing-listing">
-                      <ul>
-                        <li>Increase traffic 50%</li>
-                        <li>Social Media Marketing</li>
-                        <li>10 Free Optimization</li>
-                        <li>24/7 support</li>
-                      </ul>
-                    </div>
-                    <a href="#" class="btn white-btn">Get the plan</a>
-                  </div>
-
-                  <div class="pricing-shape">
-                    <img class="pricing1" src="{% static 'images/index/procing-shape1.png' %}" alt="">
-                    <img class="pricing2" src="{% static 'images/index/procing-shape2.png' %}" alt="">
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-6 col-md-6">
-
-            <div class="section-tittle section-tittle3">
-              <span>Oue Best Services</span>
-              <h2>Our pricing</h2>
-              <p class="pt-20 pb-40">Cnsectetur adipisicing cvbelit, sxced dbeo eiucdsmod tempor incididunt ut labore
-                egsfgt dolore magna aliqua. Ut encim ad minim veniam, quis nostrud exercitation ulclamco laboris nisi
-                ufgut aliquip edgx ebrha.</p>
-            </div>
-
-            <div class="pricing-button">
-              <nav>
-                <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                  <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab"
-                    aria-controls="nav-home" aria-selected="true">Monthly</a>
-                  <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab"
-                    aria-controls="nav-profile" aria-selected="false">Yearly</a>
-                </div>
-              </nav>
-            </div>
-
-          </div>
-        </div>
-      </div>
-    </div>
 
 
-    <div class="testimonial-area testimonial-padding">
-      <div class="container ">
-        <div class="row align-items-center">
-          <div class="col-lg-7 col-md-7">
-            <div class="h1-testimonial-active">
-
-              <div class="single-testimonial">
-
-                <div class="testimonial-caption ">
-
-                  <div class="testimonial-founder d-flex align-items-center mb-30">
-                    <div class="founder-img">
-                      <img src="{% static 'images/index/Homepage_testi.png' %}" alt="">
-                    </div>
-                    <div class="founder-text">
-                      <span>Jahon Ann</span>
-                      <p>CEO, Colorlib</p>
-                    </div>
-                  </div>
-                  <div class="testimonial-top-cap">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                      labore et dolore magna aliqua. Quis ipsum suspendisse ultrice.</p>
-                  </div>
-                </div>
-              </div>
-
-              <div class="single-testimonial">
-
-                <div class="testimonial-caption ">
-
-                  <div class="testimonial-founder d-flex align-items-center mb-30">
-                    <div class="founder-img">
-                      <img src="{% static 'images/index/Homepage_testi.png' %}" alt="">
-                    </div>
-                    <div class="founder-text">
-                      <span>Jahon Ann</span>
-                      <p>CEO, Colorlib</p>
-                    </div>
-                  </div>
-                  <div class="testimonial-top-cap">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                      labore et dolore magna aliqua. Quis ipsum suspendisse ultrice.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-5 col-md-5">
-            <div class="testimonial-banner">
-              <img src="{% static 'images/index/testimonail.png' %}" alt="">
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <img src="{% static 'images/index/shape-testimonial.png' %}" class="testimonial-shape d-none d-lg-block" alt="">
-    </div>
-
-
-    <section class="support-area section-bg pt-150 pb-150" data-background="{% static '' %}images/index/section_bg03.jpg">
+    <section class="support-area section-bg pt-150 pb-150"
+      data-background="{% static '' %}images/index/section_bg03.jpg">
       <div class="container">
         <div class="row align-items-center justify-content-between">
           <div class="col-lg-5">
@@ -697,58 +496,6 @@
 
     <div class="footer-area">
       <div class="container">
-        <div class="footer-top footer-padding">
-          <div class="row justify-content-between">
-            <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6">
-              <div class="single-footer-caption mb-50">
-                <div class="single-footer-caption mb-30">
-
-                  <div class="footer-logo">
-                    <a href="index-2.html"><img src="{% static 'images/index/logo2_footer.png' %}" alt=""></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-xl-2 col-lg-2 col-md-4 col-sm-6">
-              <div class="single-footer-caption mb-50">
-                <div class="footer-tittle">
-                  <h4>All packages</h4>
-                  <ul>
-                    <li><a href="#">Package-1</a></li>
-                    <li><a href="#">Package-2</a></li>
-                    <li><a href="#">Package-3</a></li>
-                    <li><a href="#">Custome</a></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
-              <div class="single-footer-caption mb-50">
-                <div class="footer-tittle">
-                  <h4>Quick Link</h4>
-                  <ul>
-                    <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">News & Articles</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6">
-              <div class="single-footer-caption mb-50">
-                <div class="footer-tittle">
-                  <h4>+1 514 648 256</h4>
-                  <ul>
-                    <li><a href="#"><span class="__cf_email__"
-                          data-cfemail="047d6b71766169656d68446369656d682a676b69">[email&#160;protected]</span></a></li>
-                  </ul>
-                  <p>123 East 26th Street, Fifth Floor, New York, NY 10011</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
         <div class="footer-bottom">
           <div class="row d-flex justify-content-between align-items-center">
             <div class="col-xl-9 col-lg-9 ">
@@ -771,10 +518,6 @@
 
   </footer>
 
-  <div id="back-top">
-    <a title="Go to Top" href="#"> <i class="fas fa-level-up-alt"></i></a>
-  </div>
-
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -785,28 +528,27 @@
 <!-- Mirrored from preview.colorlib.com/theme/webhostingservice/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 14 Mar 2021 07:01:48 GMT -->
 
 </html>
-  <script>
-    var open = 0;
-    const chatbotScreen = document.getElementById('chatbotScreen');
-    function chatOpen() {
-      if (open == 0) {
-        chatbotScreen.style.display = "block";
-        open = 1;
-        removeStyling();
-      }
-      else if (open == 1) {
-        chatbotScreen.style.display = "none";
-        open = 0;
-      }
-      
+<script>
+  var open = 0;
+  const chatbotScreen = document.getElementById('chatbotScreen');
+  function chatOpen() {
+    if (open == 0) {
+      chatbotScreen.style.display = "block";
+      open = 1;
+      removeStyling();
     }
-    function removeStyling()
-    {
-      toBeHiddenPoweredBy = document.getElementById('agent-avatar');
-      console.log(toBeHiddenPoweredBy);
+    else if (open == 1) {
+      chatbotScreen.style.display = "none";
+      open = 0;
     }
 
-    setTimeout(function () {
-      const chatCompany = document.getElementsByClassName('b-agent-demo_powered_by');
-    }, 3000);
-  </script>
+  }
+  function removeStyling() {
+    toBeHiddenPoweredBy = document.getElementById('agent-avatar');
+    console.log(toBeHiddenPoweredBy);
+  }
+
+  setTimeout(function () {
+    const chatCompany = document.getElementsByClassName('b-agent-demo_powered_by');
+  }, 3000);
+</script>
