--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Grow Green</title>
+  <title>We Are The Asteroid</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -82,7 +82,8 @@
 
               <div class="col-xl-2 col-lg-1 col-md-1">
                 <div class="logo">
-                  <a href="index-2.html"><img src="{% static 'images/index/logo.png' %}" alt=""></a>
+                  <a href="{% url 'main:home' %}"><img style="height: 99px;" src="{% static 'images/logo.png' %}"
+                      alt=""></a>
                 </div>
               </div>
               <div class="col-xl-8 col-lg-8 col-md-8">
@@ -90,7 +91,7 @@
                 <div class="main-menu f-right d-none d-lg-block">
                   <nav>
                     <ul id="navigation">
-                      <li><a href="index-2.html">Home</a></li>
+                      <li><a href="#">Home</a></li>
                       <li><a href="about.html">Causes</a></li>
                       <li><a href="services.html">Effects</a></li>
                       <li><a href="">Solutions</a></li>
@@ -102,7 +103,7 @@
               </div>
               <div class="col-xl-2 col-lg-3 col-md-3">
                 <div class="header-right-btn f-right d-none d-lg-block">
-                  <a href="earth.html" class="btn header-btn">
+                  <a href="{% url 'main:earth' %}" class="btn header-btn">
                     The Human Asteroid.
                   </a>
                 </div>
@@ -129,11 +130,12 @@
             </video>
 
             <div class="content">
-              <h1><span> Welcome To </span> MedBay.</h1>
-              <p>
-                Consult top doctors online for any health concern. Book an appointment for an in-clinic
-                consultation. Find
-                experienced doctors across all specialties
+              <h1 style="color:#343a40;"><span style="color:#343a40;"> We are the </span> Asteroid.</h1>
+              <p style="color:#343a40;">
+                With temperatures and sea-levels on the rise, it is evident that the severity of our actions is taking a
+                toll on the
+                planet.<br>
+                Let's take a stand and spread awareness about Climate Change.
               </p>
             </div>
           </div>
@@ -148,8 +150,8 @@
           <div class="col-lg-12">
 
             <div class="section-tittle text-center mb-80">
-              <span>Our Blog</span>
-              <h2>Our latest news</h2>
+              <span>Keeping Up With Climate Change</span>
+              <h2>The News Section</h2>
             </div>
           </div>
         </div>
@@ -157,33 +159,40 @@
           <div class="col-lg-4 col-md-6">
             <div class="single-blogs mb-100">
               <div class="blog-img">
-                <img src="{% static 'images/index/blog1.png' %}" alt="">
+                <img
+                  src="https://assets.fontsinuse.com/static/use-media-items/28/27012/full-1400x1400/5670256f/cnn-logo-square.png"
+                  alt="">
               </div>
               <div class="blog-cap">
-                <span class="color1">23 Dec, 2020</span>
-                <h4><a href="#">Addiction When Gambling Becomes</a></h4>
+                <span class="color1">13 Mar, 2021</span>
+                <h4><a href="{% url 'news:home' %}">Biden calls on 14-year-old prodigy to tackle climate change</a></h4>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="single-blogs mb-100">
               <div class="blog-img">
-                <img src="{% static 'images/index/blog2.png' %}" alt="">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/67/Fox_News_Channel_logo.svg/1200px-Fox_News_Channel_logo.svg.png"
+                  alt="">
               </div>
               <div class="blog-cap">
-                <span class="color1">23 Dec, 2020</span>
-                <h4><a href="#">Addiction When Gambling Becomes</a></h4>
+                <span class="color1">11 Dec, 2020</span>
+                <h4><a href="{% url 'news:home' %}">Slowing down of ocean currents causes devastation on our climate</a>
+                </h4>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="single-blogs mb-100">
               <div class="blog-img">
-                <img src="{% static 'images/index/blog3.png' %}" alt="">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/62/BBC_News_2019.svg/1200px-BBC_News_2019.svg.png"
+                  alt="">
               </div>
               <div class="blog-cap">
-                <span class="color1">23 Dec, 2020</span>
-                <h4><a href="#">Addiction When Gambling Becomes</a></h4>
+                <span class="color1">12 Dec, 2019</span>
+                <h4><a href="{% url 'news:home' %}">The US is back in the Paris Agreement. Now what?</a></h4>
               </div>
             </div>
           </div>
@@ -295,40 +304,14 @@
     </section>
 
 
-    <section class="all-starups-area section-padding2">
-
-      <div class="starups">
-        <div class="starups-details">
-
-          <div class="section-tittle section-tittle3">
-            <span>Get your domain</span>
-            <h2>We are with you every step of the way</h2>
-          </div>
-
-          <div class="details-caption">
-            <p>Cnsectetur adipisicing cvbelit, sxced dbeo eiucdsmod tempor incididunt ut labore egsfgt dolore magna
-              aliqua. Ut encim ad minim veniam, quis nostrud exercitation ulclamco laboris nisi ufgut aliquip edgx
-              ebrha.</p>
-            <p>Cnsectetur adipisicing cvbelit, sxced dbeo eiucdsmod tempor incididunt ut labore egsfgt folorem.</p>
-          </div>
-          <a href="#" class="btn">get started</a>
-        </div>
-      </div>
-
-      <div class="starups-img">
-        <img src="{% static 'images/index/visit_bg.jpg' %}" alt="">
-      </div>
-    </section>
-
-
     <div class="services-area section-padding30 fix">
       <div class="container">
 
         <div class="row">
           <div class="col-lg-12">
             <div class="section-tittle text-center mb-100">
-              <span>Oue Best Services</span>
-              <h2>What we have for you</h2>
+              <span>The Culprits</span>
+              <h2>Causes Of Climate Change</h2>
             </div>
           </div>
         </div>
@@ -340,9 +323,9 @@
                   <span class="flaticon-server"></span>
                 </div>
                 <div class="services-cap">
-                  <h3><a href="services.html">Shared Hosting</a></h3>
-                  <p>Hunky dory barney fannaround up the duff no biggie loo cup of tea jolly good ruddy!</p>
-
+                  <h3><a href="services.html">Increased use of fossil fuels</a></h3>
+                  <p>Coal, oil and gas to generate electricity, run cars and other forms of transport, and power
+                    manufacturing and industry.</p>
                 </div>
               </div>
               <div class="services-shape">
@@ -358,8 +341,9 @@
                   <span class="flaticon-green"></span>
                 </div>
                 <div class="services-cap">
-                  <h3><a href="services.html">Reseller Hosting</a></h3>
-                  <p>Hunky dory barney fannaround up the duff no biggie loo cup of tea jolly good ruddy!</p>
+                  <h3><a href="services.html">Deforestation - Greenery is Gone</a></h3>
+                  <p>The destruction of vegetation has its own adverse effects on the climate because trees absorb CO2.
+                  </p>
 
                 </div>
               </div>
@@ -376,8 +360,8 @@
                   <span class="flaticon-servers"></span>
                 </div>
                 <div class="services-cap">
-                  <h3><a href="services.html">Cloud Hosting</a></h3>
-                  <p>Hunky dory barney fannaround up the duff no biggie loo cup of tea jolly good ruddy!</p>
+                  <h3><a href="services.html">Increasingly Intensive Agriculture</a></h3>
+                  <p>Leading to an increase in greenhouse gases like methane, nitrous oxide.</p>
 
                 </div>
               </div>
@@ -387,20 +371,36 @@
               </div>
             </div>
           </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="services-area section-padding30 fix">
+      <div class="container">
+
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="section-tittle text-center mb-100">
+              <span>The Solutions</span>
+              <h2>Curbing Climate Change</h2>
+            </div>
+          </div>
+        </div>
+        <div class="row">
           <div class="col-lg-4 col-md-6 col-sm-6">
             <div class="services-wrapper mb-50">
               <div class="single-services">
                 <div class="services-icon">
-                  <span class="flaticon-servers"></span>
+                  <span class="flaticon-server"></span>
                 </div>
                 <div class="services-cap">
-                  <h3><a href="services.html">Shared Hosting</a></h3>
-                  <p>Hunky dory barney fannaround up the duff no biggie loo cup of tea jolly good ruddy!</p>
-
+                  <h3><a href="services.html">Decrease use of fossil fuels</a></h3>
+                  <p>Coal, oil and gas to generate electricity, run cars and other forms of transport, and power
+                    manufacturing and industry.</p>
                 </div>
               </div>
               <div class="services-shape">
-                <span>.04</span>
+                <span>.01</span>
                 <img src="assets/img/gallery/shape-services.png" alt="">
               </div>
             </div>
@@ -412,13 +412,14 @@
                   <span class="flaticon-green"></span>
                 </div>
                 <div class="services-cap">
-                  <h3><a href="services.html">Reseller Hosting</a></h3>
-                  <p>Hunky dory barney fannaround up the duff no biggie loo cup of tea jolly good ruddy!</p>
+                  <h3><a href="services.html">Afforestation - Greenery is Gone</a></h3>
+                  <p>The destruction of vegetation has its own adverse effects on the climate because trees absorb CO2.
+                  </p>
 
                 </div>
               </div>
               <div class="services-shape">
-                <span>.05</span>
+                <span>.02</span>
                 <img src="assets/img/gallery/shape-services.png" alt="">
               </div>
             </div>
@@ -427,16 +428,16 @@
             <div class="services-wrapper mb-50">
               <div class="single-services">
                 <div class="services-icon">
-                  <span class="flaticon-server"></span>
+                  <span class="flaticon-servers"></span>
                 </div>
                 <div class="services-cap">
-                  <h3><a href="services.html">Cloud Hosting</a></h3>
-                  <p>Hunky dory barney fannaround up the duff no biggie loo cup of tea jolly good ruddy!</p>
+                  <h3><a href="services.html">Use of Renewable Energy</a></h3>
+                  <p>Leading to an increase in greenhouse gases like methane, nitrous oxide.</p>
 
                 </div>
               </div>
               <div class="services-shape">
-                <span>.06</span>
+                <span>.03</span>
                 <img src="assets/img/gallery/shape-services.png" alt="">
               </div>
             </div>
@@ -444,52 +445,6 @@
         </div>
       </div>
     </div>
-
-
-
-    <section class="support-area section-bg pt-150 pb-150"
-      data-background="{% static '' %}images/index/section_bg03.jpg">
-      <div class="container">
-        <div class="row align-items-center justify-content-between">
-          <div class="col-lg-5">
-            <div class="support-caption">
-
-              <div class="section-tittle section-tittle5">
-                <span>Get your domain</span>
-                <h2>24/7 Expert Support</h2>
-                <p class="support-details">Our expert team is always on hand to help answer your questions, get you
-                  started, and grow your presence online. You can call, chat or email us any time!</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="support-number">
-
-              <div class="single-contact text-center">
-                <div class="contact-icon">
-                  <i class="fas fa-phone-volume"></i>
-                </div>
-                <div class="contact-number">
-                  <span>+1 514 648</span>
-                </div>
-              </div>
-
-              <div class="single-contact text-center">
-                <div class="contact-icon">
-                  <i class="far fa-comment"></i>
-                </div>
-                <div class="contact-number">
-                  <span>Text Us</span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-
-
 
   </main>
   <footer>
