--- a/main/templates/main/earth.html
+++ b/main/templates/main/earth.html
@@ -79,7 +79,7 @@
                     <ul id="navigation">
                       <li><a href="{% url 'main:home' %}">Home</a></li>
                       <li><a href="{% url 'main:child' %}">For Child</a></li>
-                      <li><a href="news.html">News</a>
+                      <li><a href="{% url 'news:home' %}">News</a>
                       </li>
                     </ul>
                   </nav>
