--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -95,7 +95,7 @@
                       <li><a href="about.html">Causes</a></li>
                       <li><a href="services.html">Effects</a></li>
                       <li><a href="">Solutions</a></li>
-                      <li><a href="news.html">News</a>
+                      <li><a href="{% url 'news:home' %}">News</a>
                       </li>
                     </ul>
                   </nav>
