--- a/main/templates/main/child.html
+++ b/main/templates/main/child.html
@@ -66,7 +66,7 @@
                   <nav>
                     <ul id="navigation">
                       <li><a href="{% url 'main:home' %}">Home</a></li>
-                      <li><a href="news.html">News</a>
+                      <li><a href="{% url 'news:home' %}">News</a>
                       </li>
                     </ul>
                   </nav>
